--- a/portfolios/portfolio-6/portfolio-6.css
+++ b/portfolios/portfolio-6/portfolio-6.css
@@ -34,9 +34,9 @@ nav {
   height: 20px;
   width: 100%;
   padding: 60px;
-  /* position: fixed;
+  position: fixed;
   top: 0;
-  z-index: 1000; */
+  z-index: 1000;
 }
 
 .main-nav {
@@ -103,18 +103,20 @@ nav a {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100%s;
   width: 100vw;
   background: linear-gradient(135deg, #6a1b9a, #d81b60);
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-top: 120px;
+  
 }
 
 .container {
   display: flex;
   width: 80vw;
-  height: 1150px;
+  height: 1250px;
   overflow-x: auto;
   overflow-y: auto;
   position: relative;
@@ -122,9 +124,9 @@ nav a {
   border: 10px solid #333;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
   border-radius: 15px;
-  margin: 0 auto;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-top: 20px;
+  z-index: 2;
+  
 }
 
 .container::-webkit-scrollbar {
@@ -158,19 +160,19 @@ nav a {
 .computer-stand::before {
   content: "";
   position: absolute;
-  bottom: 20px;
-  width: 100%;
   height: 50px;
   background-color: #444;
   border-radius: 0 0 20px 20px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-  z-index: -2;
+  z-index: 0;
+  right: -10px;
+  bottom: 10px;
 }
 
 .computer-stand-base {
   width: 20%;
   height: 30px;
-  bottom: 20px;
+  bottom: 100px;
   background-color: #2c2c2c;
   border-radius: 10px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
@@ -181,7 +183,7 @@ nav a {
   display: flex;
   justify-content: left;
   gap: 10px;
-  margin: 2em 0 -20px 0 ;
+  
 }
 
 .table-toggle {
@@ -200,6 +202,7 @@ nav a {
   cursor: pointer;
   transition: 0.3s ease;
   border: 2px solid #e17968;
+  z-index: 10;
 }
 
 
